# XMLParser

./: .gitignore  .~lock.Report.odt#  CMakeLists.txt  README.md  Report.odt
data/: example.xml  order.xml
src/: Attribute.cpp  Base_State.cpp  Cdata.cpp  ContextClass.cpp  Context_and_State_Controller.cpp  Description.cpp  Entity.cpp  Entity_Attrib_States.cpp  Entity_States.cpp  EscapeHandler.cpp  InitState.cpp  Init_State.cpp  MiscFunctions.cpp  OpenArrow.cpp  StateController.cpp  State_Controller.cpp  XMLParser.cpp  XMLParser.h  cdata.cpp  main.cpp
